test/unit-tests/errors/contents-match-error.spec.d.ts
export declare class EqualMatchErrorTests {
    shouldMatchMessage(container: any, expectedContent: any): void;
    shouldNotMatchMessage(container: any, expectedContent: any): void;
}
